--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 pve-kernel (5.17.3-1) pve; urgency=medium
 
   * Update to Linux 5.17.3.
+  * Update to ZFS 2.1.4
 
- -- Fabian Mastenbroek <mail.fabianm@gmail.com>  Sat, 16 Apr 2022 08:43:53 +0000
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 16 Apr 2022 16:11:25 +0000
 
 pve-kernel (5.17.2-1) pve; urgency=medium
 
