--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+pve-kernel (5.17.8-3) pve; urgency=medium
+
+  * Update to Linux 5.17.8.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 16 May 2022 13:28:30 +0000
+
+pve-kernel (5.17.8-2) pve; urgency=medium
+
+  * Update to Linux 5.17.8.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 16 May 2022 13:27:09 +0000
+
 pve-kernel (5.17.5-1) pve; urgency=medium
 
   * Update to Linux 5.17.5.
