--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.17.9-1) pve; urgency=medium
+
+  * Update to Linux 5.17.9.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Fri, 20 May 2022 11:36:12 +0000
+
 pve-kernel (5.17.8-2) pve; urgency=medium
 
   * Update to Linux 5.17.8.
