--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.17.12-1) pve; urgency=medium
+
+  * Update to Linux 5.17.12.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Tue, 31 May 2022 15:32:13 +0000
+
 pve-kernel (5.17.11-1) pve; urgency=medium
 
   * Update to Linux 5.17.11.
