--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.17.13-1) pve; urgency=medium
+
+  * Update to Linux 5.17.13.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 06 Jun 2022 09:48:23 +0000
+
 pve-kernel (5.17.12-1) pve; urgency=medium
 
   * Update to Linux 5.17.12.
