--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.17.14-1) pve; urgency=medium
+
+  * Update to Linux 5.17.14.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 09 Jun 2022 11:53:10 +0000
+
 pve-kernel (5.17.13-1) pve; urgency=medium
 
   * Update to Linux 5.17.13.
