--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.6-4) pve; urgency=medium
+
+  * Update to Linux 5.18.6.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 25 Jun 2022 12:27:18 +0000
+
 pve-kernel (5.17.8-3) pve; urgency=medium
 
   * Update to Linux 5.17.8.
