--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.7-5) pve; urgency=medium
+
+  * Update to Linux 5.18.7.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 25 Jun 2022 16:27:32 +0000
+
 pve-kernel (5.18.6-4) pve; urgency=medium
 
   * Update to Linux 5.18.6.
