--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.9-1) pve; urgency=medium
+
+  * Update to Linux 5.18.9.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sun, 03 Jul 2022 11:21:01 +0000
+
 pve-kernel (5.18.8-1) pve; urgency=medium
 
   * Update to Linux 5.18.8.
