--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.11-1) pve; urgency=medium
+
+  * Update to Linux 5.18.11.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Wed, 13 Jul 2022 11:21:20 +0000
+
 pve-kernel (5.18.10-1) pve; urgency=medium
 
   * Update to Linux 5.18.10.
