--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.12-1) pve; urgency=medium
+
+  * Update to Linux 5.18.12.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Fri, 15 Jul 2022 11:19:59 +0000
+
 pve-kernel (5.18.11-1) pve; urgency=medium
 
   * Update to Linux 5.18.11.
