--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.15-1) pve; urgency=medium
+
+  * Update to Linux 5.18.15.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 30 Jul 2022 11:22:20 +0000
+
 pve-kernel (5.18.14-1) pve; urgency=medium
 
   * Update to Linux 5.18.14.
