--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.16-1) pve; urgency=medium
+
+  * Update to Linux 5.18.16.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 04 Aug 2022 11:21:10 +0000
+
 pve-kernel (5.18.15-1) pve; urgency=medium
 
   * Update to Linux 5.18.15.
