--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.18.17-1) pve; urgency=medium
+
+  * Update to Linux 5.18.17.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 11 Aug 2022 12:59:06 +0000
+
 pve-kernel (5.18.16-1) pve; urgency=medium
 
   * Update to Linux 5.18.16.
