--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.1-1) pve; urgency=medium
+
+  * Update to Linux 5.19.1.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sun, 14 Aug 2022 13:17:27 +0000
+
 pve-kernel (5.18.7-6) pve; urgency=medium
 
   * Update to Linux 5.18.7.
