--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.2-1) pve; urgency=medium
+
+  * Update to Linux 5.19.2.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 18 Aug 2022 12:26:51 +0000
+
 pve-kernel (5.19.1-1) pve; urgency=medium
 
   * Update to Linux 5.19.1.
