--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.3-1) pve; urgency=medium
+
+  * Update to Linux 5.19.3.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 22 Aug 2022 11:21:32 +0000
+
 pve-kernel (5.19.2-1) pve; urgency=medium
 
   * Update to Linux 5.19.2.
