--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.4-1) pve; urgency=medium
+
+  * Update to Linux 5.19.4.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 25 Aug 2022 11:23:00 +0000
+
 pve-kernel (5.19.3-1) pve; urgency=medium
 
   * Update to Linux 5.19.3.
