--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.5-1) pve; urgency=medium
+
+  * Update to Linux 5.19.5.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 29 Aug 2022 11:22:39 +0000
+
 pve-kernel (5.19.4-1) pve; urgency=medium
 
   * Update to Linux 5.19.4.
