--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.6-1) pve; urgency=medium
+
+  * Update to Linux 5.19.6.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 01 Sep 2022 11:22:05 +0000
+
 pve-kernel (5.19.5-1) pve; urgency=medium
 
   * Update to Linux 5.19.5.
