--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.8-1) pve; urgency=medium
+
+  * Update to Linux 5.19.8.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 08 Sep 2022 11:22:57 +0000
+
 pve-kernel (5.19.7-1) pve; urgency=medium
 
   * Update to Linux 5.19.7.
