--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.10-1) pve; urgency=medium
+
+  * Update to Linux 5.19.10.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Tue, 20 Sep 2022 13:18:19 +0000
+
 pve-kernel (5.19.9-1) pve; urgency=medium
 
   * Update to Linux 5.19.9.
