--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.11-1) pve; urgency=medium
+
+  * Update to Linux 5.19.11.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 24 Sep 2022 11:22:45 +0000
+
 pve-kernel (5.19.10-1) pve; urgency=medium
 
   * Update to Linux 5.19.10.
