--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.12-1) pve; urgency=medium
+
+  * Update to Linux 5.19.12.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Wed, 28 Sep 2022 11:25:12 +0000
+
 pve-kernel (5.19.11-1) pve; urgency=medium
 
   * Update to Linux 5.19.11.
