--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.14-1) pve; urgency=medium
+
+  * Update to Linux 5.19.14.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Wed, 05 Oct 2022 11:25:48 +0000
+
 pve-kernel (5.19.12-1) pve; urgency=medium
 
   * Update to Linux 5.19.12.
