--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.15-1) pve; urgency=medium
+
+  * Update to Linux 5.19.15.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Wed, 12 Oct 2022 11:26:55 +0000
+
 pve-kernel (5.19.14-1) pve; urgency=medium
 
   * Update to Linux 5.19.14.
