--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.16-1) pve; urgency=medium
+
+  * Update to Linux 5.19.16.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 15 Oct 2022 11:24:10 +0000
+
 pve-kernel (5.19.15-1) pve; urgency=medium
 
   * Update to Linux 5.19.15.
