--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (5.19.17-1) pve; urgency=medium
+
+  * Update to Linux 5.19.17.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 24 Oct 2022 11:29:20 +0000
+
 pve-kernel (5.19.16-1) pve; urgency=medium
 
   * Update to Linux 5.19.16.
