--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.5-1) pve; urgency=medium
+
+  * Update to Linux 6.0.5.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 27 Oct 2022 12:15:18 +0000
+
 pve-kernel (5.19.1-1) pve; urgency=medium
 
   * Update to Linux 5.19.1.
