--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.7-1) pve; urgency=medium
+
+  * Update to Linux 6.0.7.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Fri, 04 Nov 2022 11:21:52 +0000
+
 pve-kernel (6.0.6-1) pve; urgency=medium
 
   * Update to Linux 6.0.6.
