--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ pve-kernel (6.0.8-1) pve; urgency=medium
 
   * Update to Linux 6.0.8.
 
+ -- fw867 <mail.ffkykzs@gmail.com>  Mon, 14 Nov 2022 11:23:15 +0000
+
+pve-kernel (6.0.8-1) pve; urgency=medium
+
+  * Update to Linux 6.0.8.
+
  -- fw867 <mail.ffkykzs@gmail.com>  Fri, 11 Nov 2022 11:22:09 +0000
 
 pve-kernel (6.0.7-1) pve; urgency=medium
