--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.9-1) pve; urgency=medium
+
+  * Update to Linux 6.0.9.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Wed, 16 Nov 2022 11:20:41 +0000
+
 pve-kernel (6.0.8-1) pve; urgency=medium
 
   * Update to Linux 6.0.8.
