--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.11-1) pve; urgency=medium
+
+  * Update to Linux 6.0.11.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 03 Dec 2022 11:17:15 +0000
+
 pve-kernel (6.0.9-1) pve; urgency=medium
 
   * Update to Linux 6.0.9.
