--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.14-1) pve; urgency=medium
+
+  * Update to Linux 6.0.14.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Tue, 20 Dec 2022 11:19:00 +0000
+
 pve-kernel (6.0.13-1) pve; urgency=medium
 
   * Update to Linux 6.0.13.
