--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.15-1) pve; urgency=medium
+
+  * Update to Linux 6.0.15.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 22 Dec 2022 11:18:12 +0000
+
 pve-kernel (6.0.14-1) pve; urgency=medium
 
   * Update to Linux 6.0.14.
