--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.16-1) pve; urgency=medium
+
+  * Update to Linux 6.0.16.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sun, 01 Jan 2023 11:16:55 +0000
+
 pve-kernel (6.0.15-1) pve; urgency=medium
 
   * Update to Linux 6.0.15.
