--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.17-1) pve; urgency=medium
+
+  * Update to Linux 6.0.17.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Thu, 05 Jan 2023 11:19:01 +0000
+
 pve-kernel (6.0.16-1) pve; urgency=medium
 
   * Update to Linux 6.0.16.
