--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-kernel (6.0.19-1) pve; urgency=medium
+
+  * Update to Linux 6.0.19.
+
+ -- fw867 <mail.ffkykzs@gmail.com>  Sat, 14 Jan 2023 11:17:16 +0000
+
 pve-kernel (6.0.17-1) pve; urgency=medium
 
   * Update to Linux 6.0.17.
